<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099CC" >
    
    <TextView 
        android:id="@+id/info_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_tips" />
    
    <ImageView
        android:id="@+id/info_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/info_tips" />
    
    <EditText
        android:id="@+id/info_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info_img"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/info_name"
        android:paddingLeft="10dp" />
    
    <EditText
        android:id="@+id/info_psw"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info_name"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/info_psw"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />
    
    <EditText
        android:id="@+id/info_psw2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info_psw"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/info_psw2"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />
    
    <Button
        android:id="@+id/info_enter"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="#99CCFF"
        android:layout_below="@id/info_psw2"
        android:layout_marginTop="10dp"
        android:text="@string/enter" />
    

</RelativeLayout>
