<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099CC" >
    
    <ImageView
        android:id="@+id/welcome"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/frlogo" />
    
    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#99CCFF"
        android:layout_below="@id/welcome"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btn_login"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="24dp"
        android:background="#0099CC"
        android:text="@string/register"
        android:textColor="#FFFFFF" />
    
    <Button 
        android:id="@+id/btn_loginByPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="24dp"
        android:background="#0099CC"
        android:text="@string/loginByPsw"
        android:textColor="#FFFFFF" />

</RelativeLayout>
